Fixing IE spacing problem on tabs

--- a/www/extras/account/account.css
+++ b/www/extras/account/account.css
@@ -380,9 +380,11 @@ ul.topTabs li {
 	list-style-type:none;
 }
 ul.topTabs li {
-	display:block;
+	display:inline-block;
+	/*
 	float:left;
 	margin-right: 5px;
+	*/
 }
 ul.topTabs li b {
 	display:block;
